--- a/app/src/main/res/layout/fragment_ranking.xml
+++ b/app/src/main/res/layout/fragment_ranking.xml
@@ -5,10 +5,50 @@
     android:layout_height="match_parent"
     tools:context=".RankingFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="ranking" />
+    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent">
+
+        <TableRow android:layout_height="wrap_content">
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_column="2"
+                android:layout_weight="1"
+                android:text="Platz"
+                android:textAlignment="center"
+                android:textSize="25dp"></TextView>
+
+            <TextView
+                android:layout_width="80dp"
+                android:layout_column="1"
+                android:layout_weight="1"
+                android:text="Spieler"
+                android:textAlignment="center"
+                android:textSize="25dp"></TextView>
+
+            <TextView
+                android:layout_width="20dp"
+                android:layout_column="2"
+                android:layout_weight="1"
+                android:text="Punkte"
+                android:textAlignment="center"
+                android:textSize="25dp"></TextView>
+        </TableRow>
+
+        <ScrollView android:layout_height="match_parent"
+                    android:layout_marginTop="10px">
+
+            <TableLayout
+                android:id="@+id/rankingTable"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent">
+
+                <TableRow>
+
+                </TableRow>
+            </TableLayout>
+        </ScrollView>
+    </TableLayout>
 
 </FrameLayout>
