--- a/app/src/main/res/layout/fragment_adddrink.xml
+++ b/app/src/main/res/layout/fragment_adddrink.xml
@@ -3,42 +3,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".UserFragment">
+    tools:context=".AddDrinkFragment">
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:orientation="vertical">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <EditText
-                android:id="@+id/playerName"
-                android:layout_width="326dp"
-                android:layout_height="70dp"
-                android:layout_weight="1"
-                android:ems="10"
-                android:hint="Name"
-                android:textSize="30dp"
-                android:inputType="textPersonName"/>
-
-            <Button
-                android:id="@+id/addPlayerButton"
-                android:layout_width="65dp"
-                android:layout_height="70dp"
-                android:textSize="30dp"
-                android:text="+"/>
-        </LinearLayout>
-
-        <ListView
-            android:id="@+id/playerList"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:textSize="18sp" />
-    </LinearLayout>
-
+    <TextView
+        android:id="@+id/AlkHeadLine"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="TextView"
+        android:textSize="30dp"
+        android:textAlignment="center"/>
 </FrameLayout>
